--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "javapro",
+        "javapra",
         "java1",
-        "javapra"
+        "stringbufbul"
     ]
 }
