--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "java.project.sourcePaths": [
+        "stringbufbul",
+        "serilization",
         "javapro",
         "javapra",
         "java1",
-        "stringbufbul"
+        "clone"
     ]
 }
