--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,11 @@
         "stringbufbul",
         "serilization",
         "pratice",
+        "oopspratice",
         "javapro",
         "javapra",
         "java1",
         "collections",
-        "oopspratice"
+        "oopspratice1"
     ]
 }
