--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,13 @@
         "stringbufbul",
         "serilization",
         "pratice",
+        "oopspratice1",
         "oopspratice",
+        "listassignment",
         "javapro",
         "javapra",
         "java1",
         "collections",
-        "oopspratice1"
+        "hashmap"
     ]
 }
