--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "javapro",
         "javapra",
         "java1",
+        "hashmap",
         "collections",
-        "hashmap"
+        "assigmentset"
     ]
 }
